<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Main">

    <EditText
        android:id="@+id/inputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:targetApi="26" />

<TextView
    android:id="@+id/displayResults"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:textAppearance="@style/TextAppearance.AppCompat" />

</LinearLayout>